src/main/java/org/example/bank/_core/errors/exceptions/Exception404.java
package org.example.bank._core.errors.exceptions;

public class Exception404 extends RuntimeException{

    public Exception404(String msg) {
        super(msg);
    }
}